--- a/restaurant.html
+++ b/restaurant.html
@@ -2,23 +2,25 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <title>Restaurant Info</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Raleway&display=swap" rel="stylesheet">
+  <title>Restaurant Reviews - Restaurant Info</title>
 </head>
 
 <body class="inside">
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+    <nav class="nav">
+      <h1 class="nav-font"><a class="nav-link" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" class="breadcrumb">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -27,31 +29,36 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
-    <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
-    <!-- End map -->
+  <main class="maincontent" id="maincontent">
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <div id="restaurant-container" class="restaurant-container">
       <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
-    </section>
+      <div class="restaurant-img-container">
+        <img id="restaurant-img">
+      </div>
+      <div class="restaurant-info-container">
+         <!-- Beginning map -->
+        <div id="map" class="map-restaurant-info"></div>
+        <!-- End map -->
+        <div id="restaurant-address-hours" class="restaurant-address-hours"></div>
+        <p id="restaurant-address"></p>
+        <table id="restaurant-hours" class="restaurant-hours"></table>
+      </div>
+    </div>
+
+<div id="reviews-container" class="reviews-container">
+      <div id="reviews-list" class="reviews-list"></div>
+    </div>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
-    </section>
+
     <!-- End reviews -->
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
+  <footer class="footer" id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
@@ -62,7 +69,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
- <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
+  <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
   <!-- End scripts -->
 
 </body>
