--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
       <h1 class="nav-font"><a class="nav-link" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" class="breadcrumb">
+    <ul id="breadcrumb" class="breadcrumb" tabindex="0">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
