--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
     <section>
       <div class="filter-options">
         <h2 class="filter-font">Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select Neighborhood">
+        <label for="neighborhoods-select" class="filter-labels">
+          Neighborhood
+          <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Select Neighborhood">
+          </label>
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select Cuisine">
-          <option value="all">All Cuisines</option>
-        </select>
+        <label for="cuisines-select" class="filter-labels">Cuisine
+          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Select Cuisine">
+            <option value="all">All Cuisines</option>
+          </select>
+        </label>
       </div>
       <div id="restaurants-list" class="restaurants-list"></div>
     </section>
