Added an Aria role for the map and changed the resturant names to h2 since the page title was an h1.

--- a/restaurant.html
+++ b/restaurant.html
@@ -32,14 +32,14 @@
   <main class="maincontent" id="maincontent">
     <!-- Beginning restaurant -->
     <div id="restaurant-container" class="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <p id="restaurant-cuisine"></p>
       <div class="restaurant-img-container">
         <img id="restaurant-img">
       </div>
       <div class="restaurant-info-container">
          <!-- Beginning map -->
-        <div id="map" class="map-restaurant-info"></div>
+        <div id="map" class="map-restaurant-info" role="application"></div>
         <!-- End map -->
         <div id="restaurant-address-hours" class="restaurant-address-hours"></div>
         <p id="restaurant-address"></p>
