--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <main class="maincontent" id="maincontent">
     <section id="map-container">
-      <div id="map" class="map" tabindex="-1"></div>
+      <div id="map" class="map" tabindex="-1" role="application"></div>
     </section>
     <section>
       <div class="filter-options">
